third_party/move/move-compiler-v2/tests/lambda/storable/registry_ok.exp

Diagnostics:
error: unexpected token
   ┌─ tests/lambda/storable/registry_ok.move:34:12
   │
34 │         if !done {
   │            ^
   │            │
   │            Unexpected '!'
   │            Expected '('
